work on mobile layout; fixed dark mode to support multiple dark CSSes (id=css-*-dark when loaded)

--- a/www/css/rigctl.css
+++ b/www/css/rigctl.css
@@ -7,3 +7,17 @@
  * Only shared things should be added to this main CSS
  * Place dark-mode overrides in css/rigctl-dark.css for best results
  */
+#win-rig {
+   display: none;
+   border: 2px solid red;
+   border-radius: 10px;
+   position: fixed;
+   top: CALC(3em + 5px);
+   height: CALC(100% - 3em - 10px);
+   left: 0.25em;
+   width: CALC(100% - 0.5em);
+   user-select: text;
+   -webkit-user-select: text;
+   -moz-user-select: text;
+   -ms-user-select: text;
+}
